Fixing x axis text overlap

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -589,6 +589,7 @@ svg.chart-canvas {
       &.x {
         text {
           letter-spacing: 0;
+          word-spacing: -3px;
         }
         path {
           stroke: $color-0;
